--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
   <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css2?family=Brain+Flower&display=swap">
   <link rel="stylesheet" type="text/css" href="style.css">
   <script src="script.js"></script>
+  <link rel="icon" type="image/x-icon" href="/favicon.ico">
+
   <style>
     body {
       font-family: 'Brain Flower', cursive;
